# src/swagger.json
@@ -31,11 +31,19 @@
                   "name": {
                     "type": "string"
                   },
-                  "email": "string"
+                  "email": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  },
+                  "driver_license": "string"
                 },
                 "example": {
                   "name": "Example",
-                  "email": "example@email.com"
+                  "email": "example@email.com",
+                  "password": "123456",
+                  "driver_license": "132546dsdf"
                 }
               }
             }
@@ -47,76 +55,6 @@
           },
           "400": {
             "description": "Bad Request"
-          }
-        }
-      },
-      "get": {
-        "tags": ["Users"],
-        "summary": "List all users",
-        "description": "List all users if the user is an admin.",
-        "parameters": [
-          {
-            "in": "header",
-            "name": "user_id",
-            "required": true,
-            "type": "string",
-            "format": "uuid"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "400": {
-            "description": "User is not an administrator"
-          }
-        }
-      }
-    },
-    "/users/{user_id}": {
-      "get": {
-        "tags": ["Users"],
-        "summary": "Get user profile by ID",
-        "description": "To list a user you need the route param 'user_id'",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "user_id",
-            "required": true,
-            "type": "string",
-            "format": "uuid"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "404": {
-            "description": "User not exists"
-          }
-        }
-      }
-    },
-    "/users/{user_id}/admin": {
-      "patch": {
-        "tags": ["Users"],
-        "summary": "Turn an user as admin",
-        "description": "To update the user, you need the route param 'user_id'",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "user_id",
-            "required": true,
-            "type": "string",
-            "format": "uuid"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Ok"
-          },
-          "404": {
-            "description": "User not exists"
           }
         }
       }
@@ -238,34 +176,6 @@
           },
           "500": {
             "description": "Specification already exists!"
-          }
-        }
-      },
-      "get": {
-        "tags": ["Specifications"],
-        "summary": "list all categories",
-        "description": "list all categories",
-        "responses": {
-          "200":{
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "name": {
-                        "type": "string"
-                      },
-                      "description": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                }
-              }
-            }
           }
         }
       }
